1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* archiver.m (MyClassDeepDeeper): Use long for array.  Rename
	intAryVal to longAryVal.
	([MyClassDeeper +createBegin:], [MyClassDeeper -checkObject]): 
	Accomodate.

1999-06-28  Alex Lancaster  <alex@santafe.edu>

	* archiver.m (createArchiver): Conditionally create instances of
	LispArchiver or HDF5Archiver, as protocols are now separate.

1999-06-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* forwarding.m ([BaseObject -forward::]): Declare alloca.

1999-06-10  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* forwarding.m (strip_type_sig): New function.
	([BaseObject -forward::]): Use it.  Print stripped, original,
	and reconstructed type descriptions.

1999-06-05  Alex Lancaster  <alex@santafe.edu>

	* archiver.m ([MyClass -setUpdateFlag:]): New method and instance
	variable to control whether if -putObject: is used.
	([MyClass -updateArchiver:]): Only call putObject if updateFlag
	set.
	(checkArchiver): Accept additional BOOL updateFlag variable.  Set
	created objects using this flag, and the read Archiver instance
	accordingly.
	(main): Add matching `NO' update tests for each existing Lisp
	archiving test.

1999-05-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* forwarding.m ([DelegateObject [csilfd]m1i:]): New methods.
	(main): Call them, check against expected results.

1999-05-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (check_PROGRAMS): Add forwarding test.
	(forwarding_SOURCES): Add forwarding.m.

	* forwarding.m: New file.

1999-02-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* archiver.m (MyClassDeeper): Add another level of inheritance
	and test int and double arrays.

1999-02-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* archiver.m: Include swarmconfig.h to conditionally run 
	HDF5 tests.  Make deep serialization test a subclass with a component.
	(checkArchiver): Use new argument to updateArchiver:.  Don't use
	a global archiver variable.
